--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,64 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color:white ;
+  display: flex;
+  justify-content: center;
 }
+
+section{
+  width: 85vw; 
+  height: 100%;
+  background-color: #ddf2f3;
+}
+
+.top{
+  background-color: #00c0d3;
+  display: flex;
+  justify-content: center;
+  margin: 8;
+  padding: 5px;
+}
+
+article{
+  display: flex;
+}
+
+.Bottem{
+  background-color: #d3d3d3;
+  display: flex;
+  justify-content: center;
+  padding-top: 5px
+  
+
+}
+
+header{
+  display: flex;
+  justify-content: center;
+  
+}
+
+a{
+  margin: 10px;
+  text-decoration: underline;
+  
+}
+
+h1 {
+  font-size: 3rem;
+  color: grey;
+}
+
+article > div:first-child{
+  margin-right: 22px;
+  margin-left: 10px;
+  margin-top: 10px;
+  
+  border: 2px solid #67b0bf;
+  padding-bottom: 8px;
+
+} 
+
+
+
